--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ default: &default
 development:
   adapter: mysql2
   encoding: utf8
-  database: zahid-rails_development
+  database: mydb
   username: root
   password: password
   host: 127.0.0.1
